--- a/app/src/main/res/layout/fragment_recipe_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_list.xml
@@ -10,8 +10,8 @@
             type="com.mahmoud.mvisample.presentation.ui.adapter.RecipeAdapter" />
 
         <variable
-            name="viewModel"
-            type="com.mahmoud.mvisample.presentation.mvi_flow.RecipeViewModel" />
+            name="viewState"
+            type="com.mahmoud.mvisample.domain.mvi.ViewState" />
 
         <variable
             name="actionHandler"
@@ -35,14 +35,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:viewState="@{viewModel.viewState}"
+                app:viewState="@{viewState}"
                 app:adapter="@{adapter}"
                 tools:listitem="@layout/recipe_item_layout" />
 
             <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="@{viewModel.viewState.loading}"
+                android:visibility="@{viewState.loading}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -52,8 +52,8 @@
                 android:id="@+id/errorView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.viewState.error.message}"
-                android:visibility="@{viewModel.viewState.error}"
+                android:text="@{viewState.error.message}"
+                android:visibility="@{viewState.error}"
                 android:onClick="@{()-> actionHandler.retry()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
